# programmieruebung2

./: .gitignore  README.md  requirements.txt
1_first_projects/: .gitignore  hello_world.py  make_primes.py  my_first_script.py  readme.md
2_streamlit/: main.py  read_data.py  read_pandas.py  two_colums.py
3_pandas/: main.py  my_first_pandas.py  read_pandas.py
3_pandas/data_and_scripts/: PÜ3_1_LoadingData.ipynb  PÜ3_2_Pandas.ipynb  PÜ3_3_Matplotlib_1_basics.ipynb  PÜ3_3_Matplotlib_2_advanced.ipynb  PÜ3_4_Pandas_Visualization.ipynb  readme.md
3_pandas/data_and_scripts/EKG_Data/: 03_Ruhe.txt  04_Belastung.csv
3_pandas/data_and_scripts/Tasks/: Task_1_Pandas.ipynb  Task_2_Matplotlib.ipynb  Task_3_Pandas_Visualization.ipynb
4_find_peaks/: Zoo.py
5_build_dashboard/: ekgdata.py  main.py  read_person_data.py
5_reconstruct/: deconstruct.py
6_reconstruct/: a2-task_recombine.ipynb  corrupted_files.txt  deconstruct.py  load_files.py  task_recombine.ipynb
Aufgabenstellung/1_first_projects/InClassExamples/: my_first_module.py  my_first_script.py
Aufgabenstellung/1_first_projects/Sort/: load_data.py
Aufgabenstellung/2_streamlit/: main.py  read_data.py
Aufgabenstellung/2_streamlit/InClassExamples/: callbacks.py  main_1.py  main_2.py  read_data_1.py  read_data_2.py
Aufgabenstellung/4_find_peaks/: Zoo.py
Aufgabenstellung/5_build_dashboard/: ekgdata.py  main.py  person.py  pyproject.toml
Aufgabenstellung/5_build_dashboard/data/: person_db.json
Aufgabenstellung/5_build_dashboard/data/ekg_data/: 01_Ruhe_short.txt
data/ekg_data/: ReadMe.txt
(+29 files in other folders)
