[project]
name = "5_build_dashboard"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jhumci", email = "julian.huber@mci.edu"},
]
dependencies = ["plotly>=6.1.2", "streamlit>=1.45.1", "matplotlib>=3.10.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
